--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:ci": "jest --runInBand"
   },
   "dependencies": {
+    "@styled-icons/ionicons-outline": "^10.46.0",
     "@types/node": "20.12.4",
     "@types/react": "18.2.74",
     "@types/react-dom": "18.2.24",
@@ -53,6 +54,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
     "storybook": "^8.0.6",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
   },
   "lint-staged": {
