--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react-dom": "18.2.24",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.1.8",
@@ -33,10 +33,12 @@
     "@storybook/addon-interactions": "^8.0.6",
     "@storybook/addon-links": "^8.0.6",
     "@storybook/addon-onboarding": "^8.0.6",
+    "@storybook/addon-themes": "^8.0.8",
     "@storybook/blocks": "^8.0.6",
     "@storybook/nextjs": "^8.0.6",
     "@storybook/react": "^8.0.6",
     "@storybook/test": "^8.0.6",
+    "@styled-icons/boxicons-logos": "^10.47.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.3.0",
     "@testing-library/user-event": "^14.5.2",
